# codeassist

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yml  flake.nix  hf_readme.md  pyproject.toml  run.py  start_simulation.py  start_zero_style.py  training_config.json  training_loop.py
.github/: pull_request_template.md
ca_alchemy/: contract_caller.py
policy_models/: .gitignore  Dockerfile  README.md  __init__.py  api_server.py  config.py  inference.py  models.py  pyproject.toml  rewards.py  state_adapter.py
policy_models/backbones/: gru.py  lg_transformer.py  lstm.py
policy_models/baseline/: asm_assistant_model.pt  asm_featurizer.pt  asm_human_model.pt
policy_models/cli/: run_tasks.py
policy_models/examples/toys/: episodes.json  single_state.json
policy_models/featurizers/: featurizer.py  text_embedders.py
policy_models/training/: dataset.py  telemetry.py  train_from_episodes.py  trainers.py  zero_style.py
policy_models/utils/: action_mask.py  masking.py  normalize.py
policy_models/verify/: __init__.py  run_all.py  synth_data.py  verify_backbones.py  verify_cursor.py  verify_featurizer_training.py  verify_models.py  verify_ppo.py  verify_search.py
solution-tester/: Dockerfile  build.sh  main.py  post.sh  pyproject.toml  run.sh  test1.json  test2.json  test3.json  test4.json  test5.json
state-service/: .dockerignore  Dockerfile  README.md  assistant_attribution.py  main.py  pyproject.toml  run_tests.py
web-ui/: .env.development  .eslintignore  .gitignore  .prettierignore  Dockerfile  README.md  eslint.config.mjs  (+5 more)
(+112 files in other folders)
